CHANGES.txt - 01/04/2000
------------------------

CHANGES IN HTMLDOC v1.8.5

    NEW FEATURES

	- New "--titlefile" option to include an HTML file for the
	  title page(s).

    CHANGES


    BUG FIXES


CHANGES IN HTMLDOC v1.8.4

    CHANGES

	- More configure script changes for FLTK DSOs.
	- FileIcon.cxx was still using NULL for outline (an
	  integer), which caused some ANSI C++ compilers to
	  complain.

    BUG FIXES

	- The Fonts and Colors tab groups did not extend to
	  the full width of the tab area, which prevented the
	  Browse button from working when clicked on the right
	  side.
	- The help dialog window did not scroll all the way to
	  the bottom of the text.
	- The chapter ("c") header/footer string did not work.
	- The heading ("h") header/footer string did not always
	  match the first heading on a page.
	- The header and footer fonts were not used when
	  computing the widths of the header and footer strings.
	- The Windows distribution did not create the right
	  shortcut for the Users Manual in the Start menu.
	- The command-line code did not accept "--grayscale",
	  only "--gray"
	- Multi-file HTML output did not use the right link for
	  the table-of-contents file if no title page was being
	  generated.
	- Extra whitespace before and after tables has been
	  eliminated.


CHANGES IN HTMLDOC v1.8.3

    NEW FEATURES

	- New "--browserwidth" option to control scaling of images and
	  tables that use fixed pixel widths.

    CHANGES

	- The configure script now looks for the OpenGL library
	  (required if you use a shared FLTK library with OpenGL
	  support.)
	- Increased the max number of chapters to 1000.

    BUG FIXES

	- Page break comments didn't force a paragraph break.
	- --no-toc prevented chapters from being output in PS
	  and PDF files.
	- Filenames didn't always get updated properly when doing a
	  "save as"...
	- Fixed some more leading/trailing whitespace problems.
	- Wasn't freeing page headings after the document was